# pandemic_SIRD

./: CMakeLists.txt  README.md
AGENT/: doctest.cpp  main_pandemic.cpp  pandemic.cpp  pandemic.hpp  parameters.cpp  parameters.hpp
EQUATION/: data.ini  doctest.cpp  main.cpp  pandemic.cpp  pandemic.hpp  parameters.cpp  parameters.hpp  people.cpp  people.hpp
